examples/typechecking/rigid.an

ex1 (x: a): b = x + 1u32

// Expected type is too general
ex2: fn a -> b =
    fn x -> x

main () = ()

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// (ex1: fn a -> b) ((x: a)) : b = (+: fn b b {Add b} [Ptr Unit] -> b) (x: a) 1_U32 {(error)}
// 
// (ex2: fn a -> b) =
//     fn (x: a) -> (x: a)
// 
// (main: fn Unit -> Unit) () = ()

// expected stderr:
// examples/typechecking/rigid.an:2:17
// 2 | ex1 (x: a): b = x + 1u32	// error: Argument 1 has type a but b was expected
//   |                 ^
// 
// examples/typechecking/rigid.an:2:19
// 2 | ex1 (x: a): b = x + 1u32	// error: No implicit found for type Add b required by +
//   |                   ^
// 
// examples/typechecking/rigid.an:2:21
// 2 | ex1 (x: a): b = x + 1u32	// error: Argument 2 has type U32 but b was expected
//   |                     ^
// 
// examples/typechecking/rigid.an:6:13
// 5 | ex2: fn a -> b =
// 6 |     fn x -> x	// error: The body of this function has type a but it is expected to return b
//   |             ^
// 
// Found 4 errors and 0 warnings
